--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project (primordia_app)
 enable_language (CXX)
 include_directories (./include)
 file (GLOB SOURCES "src/*.cpp")
-add_executable(primordia ${SOURCES})
+add_executable(PRIMoRDiA_1.1v_LINUX64 ${SOURCES})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -O3  -std=c++14 -lstdc++fs -I /usr/include/eigen3")
-target_link_libraries(primordia -lstdc++fs)
+target_link_libraries(PRIMoRDiA_1.1v_LINUX64 -lstdc++fs)
