--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,5 @@ enable_language (CXX)
 include_directories (./include)
 file (GLOB SOURCES "src/*.cpp")
 add_executable(PRIMoRDiA_1.1v_LINUX64 ${SOURCES})
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -O3  -std=c++14 -lstdc++fs -I /usr/include/eigen3")
-target_link_libraries(PRIMoRDiA_1.1v_LINUX64 -lstdc++fs)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -O3  -std=c++14 -lstdc++fs -lint2 -I /usr/include/eigen3 -I /usr/local/libint/2.5.0/include -I /usr/local/libint/2.5.0/include/libint2 -L /usr/local/libint/2.5.0/lib")
+target_link_libraries(PRIMoRDiA_1.1v_LINUX64 -lstdc++fs -lint2)
